[package]
name = "polkadot-collator"
version = "0.7.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.1"
sc-client = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service" }
log = "0.4.8"
tokio = "0.1.22"
futures-timer = "1.0"
codec = { package = "parity-scale-codec", version = "1.1.0" }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
