[package]
name = "polkadot-collator"
version = "0.7.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.1"
sc-client = { git = "https://github.com/paritytech/substrate", branch = "ashley-polkadot-wasm" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-polkadot-wasm" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "ashley-polkadot-wasm" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ashley-polkadot-wasm" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-polkadot-wasm" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "ashley-polkadot-wasm" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ashley-polkadot-wasm" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "ashley-polkadot-wasm" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service" }
log = "0.4.8"
tokio = "0.1.22"
futures-timer = "1.0"
codec = { package = "parity-scale-codec", version = "1.1.0" }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "ashley-polkadot-wasm" }
