[package]
name = "polkadot-rpc"
version = "0.7.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "sc-client", git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-prometheus" }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false }
