[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-cumulus-branch" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-cumulus-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-cumulus-branch" }
polkadot-test-runtime = { path = ".." }
substrate-test-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-cumulus-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-cumulus-branch" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-cumulus-branch" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-cumulus-branch" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-cumulus-branch" }
sc-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-cumulus-branch" }
futures = "0.3.1"
